Use I18n for meta description

--- a/app/views/expressions/new.html.slim
+++ b/app/views/expressions/new.html.slim
@@ -1,5 +1,5 @@
 - title t('.browser_title')
-- description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの英単語・フレーズの新規作成ページ'
+- description t('.description')
 
 .pt-24.lg:pt-20.pb-20.max-w-800.w-full.mx-auto
   p.text-green-700.font-bold.pt-1.pb-3
