--- a/app/views/expressions/show.html.slim
+++ b/app/views/expressions/show.html.slim
@@ -1,5 +1,5 @@
 - title t('.browser_title')
-- description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの英単語・フレーズの詳細ページ'
+- description t('.description')
 
 .specific-expression.pt-24.lg:pt-20.pb-20.px-2.max-w-800.w-full.mx-auto
   p.text-green-700.pb-3.font-bold
