--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,5 +1,5 @@
 - title t('.browser_title')
-- description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの英単語・フレーズの一覧ページ'
+- description t('.description')
 
 .bg-white.pt-16.lg:pt-10.pb-24.max-w-800.w-full.mx-auto.px-2
   p.text-green-700.pl-5.font-bold.pt-1
