--- a/app/views/memorised_expressions/quizzes/show.html.slim
+++ b/app/views/memorised_expressions/quizzes/show.html.slim
@@ -1,5 +1,5 @@
 - title t('.browser_title')
-- description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの覚えた語彙一覧に保存されている英単語・フレーズのクイズページ'
+- description t('.description')
 
 .bg-white.pt-24.lg:pt-16.pb-14.max-w-800.w-full.mx-auto
   h1.text-2xl.font-bold.mb-10.border-b.border-neutral-400.pb-2.mx-2.sm:mx-0
