--- a/app/views/expressions/edit.html.slim
+++ b/app/views/expressions/edit.html.slim
@@ -1,5 +1,5 @@
 - title t('.browser_title')
-- description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの英単語・フレーズの編集ページ'
+- description t('.description')
 
 .pt-24.lg:pt-20.pb-12.lg:pt-14.max-w-800.w-full.mx-auto
   p.text-green-700.font-bold.pt-1.pb-3
