--- a/app/views/welcome/terms_of_service.html.slim
+++ b/app/views/welcome/terms_of_service.html.slim
@@ -1,5 +1,5 @@
 - title t('.browser_title')
-- description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの利用規約'
+- description t('.description')
 
 .max-w-800.w-full.mx-auto.px-4.sm:px-6.py-16.bg-white
   h1.font-black.text-2xl.text-center 利用規約
